# ved-runtime

./: .gitignore  Cargo.toml  README.md  phase6_test.ved.snapshot.json
.github/workflows/: test.yml
crates/lexum-ir/: Cargo.toml
crates/lexum-runtime/: Cargo.toml  fidelity_test.snapshot.json
crates/lexum-runtime/src/: domain_registry.rs  goal_engine.rs  interpreter.rs  logical_clock.rs  messaging.rs  persistence.rs  scheduler.rs  state.rs
crates/lexum-runtime/tests/: adversarial_simulations.rs  adversarial_tests.rs  common.rs  determinism.rs  scheduler_stress.rs  snapshot.rs  stress.rs
crates/lexum-tracer/: Cargo.toml
crates/ved-cli/: Cargo.toml  test_msg.ved
crates/ved-cli/src/: main.rs
crates/ved-runtime/: Cargo.toml
crates/ved-runtime/src/: domain_registry.rs  goal_engine.rs  interpreter.rs  lib.rs  messaging.rs  persistence.rs  rng.rs  scheduler.rs  state.rs
crates/ved-runtime/tests/: adversarial_simulations.rs  adversarial_tests.rs  common.rs  convergence.rs  fidelity_tests.rs  scheduler_stress.rs  snapshot.rs  stress.rs
test-files/: demo_crash.rs  msg_storm.lxm  msg_storm.ved.snapshot.json  msg_storm.ved.trace.json  phase4_test.lxm  phase4_test.ved.snapshot.json  phase5_test.lex  phase5_test.ved.snapshot.json  phase6_test.lxm  phase6_test.ved.snapshot.json  phase6_test_nondeterminism.lex  phase6_test_nondeterminism.ved.snapshot.json  phase7_test_sim.ved  replay.rs  starvation_test.lxm  starvation_test.ved.snapshot.json  starvation_test.ved.trace.json  test.lxm  test_msg.lxm  test_msg.ved.snapshot.json  test_msg.ved.trace.json
(+18 files in other folders)
