[package]
name = "Lexum-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = { version = "0.10.1", features = ["std"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
Lexum-ir = { path = "../Lexum-ir" }
Lexum-tracer = { version = "0.1.0", path = "../Lexum-tracer" }

[dev-dependencies]
Lexum-compiler = { path = "../../../Lexum-compiler" }
