[package]
name = "ved-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = { version = "0.10.0", features = ["std"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ved-ir = { path = "../ved-ir" }
ved-tracer = { version = "0.1.0", path = "../ved-tracer" }

[dev-dependencies]
ved-compiler = { path = "../ved-compiler" }
